fix styled list block spacing in editor

--- a/src/blocks/styled-list/editor.scss
+++ b/src/blocks/styled-list/editor.scss
@@ -15,7 +15,6 @@
 
 .block-editor-block-list__block.wp-block {
 	> ul,
-	&[data-type="ub/styled-list"],
 	&[data-type="ub/styled-list-item"] {
 		margin-top: 0;
 		margin-bottom: 0;
